--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   injectable: ^2.1.2
   flutter_dotenv: ^5.1.0
   dio: ^5.4.3+1
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.5.3
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
   dartz: ^0.10.1
@@ -79,7 +79,7 @@ flutter:
   uses-material-design: true
   assets:
     - env/
-    - assets/lang/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
