--- a/env/.env
+++ b/env/.env
@@ -1,2 +1,6 @@
 BASE_URL=https://vijana-wa-benz-api.up.railway.app/api/v1
 AUTH_TOKEN= 
+CLIENT_ID=746648352405-fe9vpl3bpnehvkdge7i9qhn6vdkh3n4n.apps.googleusercontent.com
+CODE_CHALLENGE=E9Melhoa2OwvFrEMTJguCHaoeK1t8URWbuGJSstw-cM
+REDIRECT_URI=com.nduko.ticketing:/oauth2redirect
+CODE_CHALLENGE_METHOD=S256
