updated read me and a splash screen with auth redirecting

--- a/env/.dev.env
+++ b/env/.dev.env
@@ -1,6 +1,8 @@
 BASE_URL=https://vijana-wa-benz-api.up.railway.app/api/v1
-AUTH_TOKEN= 
+AUTH_TOKEN=
 CLIENT_ID=746648352405-79tnhinpfgfu2fji1ub9ghbt2edpol1n.apps.googleusercontent.com
-CODE_CHALLENGE=E9Melhoa2OwvFrEMTJguCHaoeK1t8URWbuGJSstw-cM
+CODE_CHALLENGE= ZTqfivZzKcd6GPSZygr-qLiSGinGOHHKxAIk5oiA8Vg
+CODE_VERIFIER=dBjftJeZ4CVP-mB92Kx_7_4N-uLO3ptbK_y6yL4Z_R2g
 REDIRECT_URI=com.nduko.ticketing:/oauth2redirect
 CODE_CHALLENGE_METHOD=S256
+GOOGLE_AUTH_URI=https://accounts.google.com/o/oauth2/v2/auth
