--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^1.1.2
   app_links: ^6.4.1
   crypto: ^3.0.3
+  flutter_staggered_grid_view: ^0.7.0
   
   # ✅ CRITICAL: Use 5.x instead of 7.x for Kotlin 1.9.x compatibility
   mobile_scanner: ^5.2.3  # NOT 7.1.2 - it requires Kotlin 2.1.0
