--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,9 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+platform :ios, '13.0'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# ✅ REMOVE these conflicting lines:
+# pod 'GoogleUtilities', '~> 8.1'
+# pod 'GoogleMLKit/BarcodeScanning', '~> 7.0'
+
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -29,6 +31,8 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  # ✅ ADD this line to enable modular headers
+  use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
@@ -39,5 +43,11 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # ✅ ADD this to handle any potential build settings
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
   end
 end
