--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   crypto: ^3.0.3
   flutter_staggered_grid_view: ^0.7.0
   
-  # ✅ CRITICAL: Use 5.x instead of 7.x for Kotlin 1.9.x compatibility
-  mobile_scanner: ^5.2.3  # NOT 7.1.2 - it requires Kotlin 2.1.0
+  # ✅ FIXED: Use compatible versions
+  mobile_scanner: ^5.2.3  # This version exists and is stable
   permission_handler: ^12.0.1
   
   # State Management, DI, and Architecture
@@ -38,6 +38,10 @@ dependencies:
   injectable: ^2.1.2
   auto_route: ^9.2.2
   shared_preferences: ^2.5.3
+  
+  # Firebase - updated to latest compatible versions
+  firebase_core: ^3.7.1
+  firebase_storage: ^12.4.0
   
   # Networking and Security
   dio: ^5.4.3+1
